--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "langchain>=1.1.3",
     "langchain-classic>=1.0.0",
+    "langchain-pinecone>=0.2.13",
+    "langchain-tavily>=0.2.14",
     "python-dotenv>=1.2.1",
 ]
